--- a/docs/frontend/前端开发常见解决方案/5-侧边栏收缩问题.md
+++ b/docs/frontend/前端开发常见解决方案/5-侧边栏收缩问题.md
@@ -19,7 +19,7 @@ title: 侧边栏收缩的六种方案
 
 
 
-## **方案 1：使用 `animation` 过渡 `width`**
+## 方案 1：使用 animation 过渡 width
 
 ```
 css
@@ -48,7 +48,7 @@ css
 
 ------
 
-## **方案 2：使用 `@keyframes`**
+## 方案 2：使用@keyframes
 
 ```
 css
@@ -98,7 +98,7 @@ css
 
 ------
 
-## **方案 3：使用 `style.width` 逐步调整**
+## 方案 3：使用 style.width 逐步调整
 
 ```
 tsx
@@ -136,7 +136,7 @@ const toggleSidebar = () => {
 
 ---
 
-## **✅ 方案 4：使用 `transform`（推荐）**
+## ✅ 方案 4：使用 transform scaleX
 
 ```
 css
@@ -174,7 +174,7 @@ css
 
 ------
 
-## **✅ 方案 5：使用 `translateX()`**
+## ✅ 方案 5：使用translateX()
 
 ```
 css
