--- a/docs/frontend/JavaScript/RegExp/正则表达式.md
+++ b/docs/frontend/JavaScript/RegExp/正则表达式.md
@@ -102,6 +102,8 @@ https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects
 
 注意⚠️：replace不会修改原字符串!!!
 
+replace的第二个参数如果是一个字符串，则$是具有特殊含义的字符，如果想将匹配的内容替换成$, 需要使用$$
+
 替换字符串特殊变量：
 
 - $$  插入一个 "$"。
