--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -986,6 +986,20 @@ type TestProps = {
 </script>
 ```
 
+
+
+## 将props传递给通过RouterView显示的组件
+
+使用 v-slot 来实现
+
+```vue
+<RouterView v-slot="{ Component }">
+    <component :is="Component" :content="content"></component>
+</RouterView>
+```
+
+
+
 ## defineSlots
 
 ```ts
