[build] docs: update

--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -465,6 +465,32 @@ const globalContext = useContext()
 
 
 
+## Vue3中的context使用
+
+在使用inject接收响应式变量时，不能够解构，否则会丢失响应式
+
+JS解构的本质是用新变量接收对象的值，并没有保留原始数据的引用，所以会丢失响应式
+
+```ts
+const context = reactive({
+    name: '',
+    age: 20
+})
+
+const {name,age} = useFormContext() // 不能解构，会丢失响应式
+```
+
+如果provide提供的是多个响应式变量的集合，那么此时可以使用解构，因为解构出来的还是响应式对象
+
+```ts
+const formModel = reactive({})
+const trainParams = ref([])
+
+const {formModel,trainParams} = useFormContext()
+```
+
+
+
 ## Plugin
 
 插件可以是一个带 `install()` 方法的对象，亦或直接是一个将被用作 `install()` 方法的函数。插件选项 (`app.use()` 的第二个参数) 将会传递给插件的 `install()` 方法。
