[build] docs: update

--- a/docs/frontend/React/4.前端常见解决方案/10-异步任务并发控制.md
+++ b/docs/frontend/React/4.前端常见解决方案/10-异步任务并发控制.md
@@ -123,7 +123,7 @@ export const pLimit = (max: number) => {
  * @param ms - 每隔多少毫秒执行一次
  * @returns 返回一个取消定时器的函数
  */
-export const mySetInterval = (cb: () => void, ms: number) => {
+export const loopSetInterval = (cb: () => void, ms: number) => {
   let timeoutId: number
   const excute = () => {
     if (timeoutId) {
@@ -152,7 +152,7 @@ export const mySetInterval = (cb: () => void, ms: number) => {
  * @param {boolean} [options.immediate=false] - 是否立即执行cb
  * @returns {Function} - 一个取消定时器的函数
  */
-export const mySetInterval = (
+export const loopSetInterval = (
     cb: () => void,
     ms: number,
     options: { immediate?: boolean } = { immediate: false }
@@ -187,7 +187,7 @@ export const mySetInterval = (
  * @param {boolean} [options.immediate=false] - 是否立即执行cb
  * @returns {Function} - 一个取消定时器的函数
  */
-export const mySetInterval = (
+export const loopSetInterval = (
     cb: () => void,
     ms: number,
     options: { immediate?: boolean } = { immediate: false }
