--- a/docs/linux/Nginx/4.nginx常见问题.md
+++ b/docs/linux/Nginx/4.nginx常见问题.md
@@ -138,6 +138,8 @@ server {
 - 请求 http://localhost:30008/images/data.png，匹配 /images/，root会拼上 /images/data.png，将映射到 /opt/homebrew/var/web/images/data.png
 - 请求 http://localhost:30008/pictures/dora.png，匹配 /pictures/，alias会替换掉location的值，将映射到 /opt/homebrew/var/web/pictures/dora.png
 
+### alias
+
 如果将上面的alias调整为alias /opt/homebrew/var/web/pictures，不以 / 结尾，则返回404
 
 ==所以alias要以 / 结尾==
