--- a/docs/frontend/JavaScript/二进制文件与流/4-前端文件下载.md
+++ b/docs/frontend/JavaScript/二进制文件与流/4-前端文件下载.md
@@ -79,9 +79,31 @@ postExcelFile(params, url) {
 this.postExcelFile({ currentPage: 2, pageSize: 20 }, 'url/xxxxxxx/')
 ```
 
-
-
 form表单无法添加Request Header，如涉及到请求头，需要使用Ajax
+
+## 创建a标签下载
+
+```ts
+const downloadFile = async (fileName: string) => {
+  const blob = await getFileBlob(fileName);
+  if (blob) {
+    // 创建一个隐藏的 <a> 标签来触发下载
+    const link = document.createElement('a');
+    link.href = URL.createObjectURL(blob);
+    link.download = fileName.split('/').pop() || fileName; // 获取文件名
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+    URL.revokeObjectURL(link.href); // 释放内存
+  } else {
+      alert(`无法下载文件 ${fileName}`);
+  }
+};
+```
+
+
+
+
 
 ## Ajax通过二进制流下载文件
 
@@ -119,8 +141,6 @@ function downloadFile(data, fileName, mimeType) {
   a.remove()
 }
 ```
-
-
 
 
 
