--- a/docs/frontend/TypeScript/开发一个类型声明库.md
+++ b/docs/frontend/TypeScript/开发一个类型声明库.md
@@ -36,3 +36,14 @@ package.json中types字段是必须的，等同于main的作用
 ```
 
 给一个第三方库编写类型声明文件时，使用declare module 'lib-name'，这样就能告诉ts这是该库的类型声明文件
+
+
+
+### 使用
+
+安装时可以使用别名
+
+```sh
+pnpm add @types/vue-virtual-scroller@npm:types-vue-virtual-scroller -D
+```
+
