--- a/docs/frontend/前端开发常见解决方案/48-模型输出内容展示.md
+++ b/docs/frontend/前端开发常见解决方案/48-模型输出内容展示.md
@@ -42,3 +42,43 @@ element.scrollIntoView({
 ```
 
 这个写法会平滑地滚动，让元素出现在容器的底部。
+
+
+
+## 如何区分用户滚动和代码滚动
+
+给需要滚动的容器的父元素添加一个wheel事件，使用鼠标滚轮滚动时就会触发这个wheel事件，然后通过响应式状态来判断
+
+```ts
+const conversationRef = useTemplateRef('conversationRef')
+const scrollContainerRef = useTemplateRef('scrollContainerRef')
+const userScrolled = ref(false)
+const scrollThrottle = ref(false)
+const scrollToLatestMessage = () => {
+  const sessionEm = conversationRef.value
+  if (sessionEm) {
+    if (scrollThrottle.value || userScrolled.value) return // 如果用户手动滚动，则不再自动滚动
+    scrollThrottle.value = true
+
+    requestAnimationFrame(() => {
+      conversationRef.value?.scrollIntoView({ behavior: 'smooth', block: 'end' })
+      setTimeout(() => {
+        scrollThrottle.value = false
+      }, 100)
+    })
+  }
+}
+
+onMounted(() => {
+  if (scrollContainerRef.value) {
+    scrollContainerRef.value.addEventListener(
+      'wheel',
+      debounce(() => {
+        console.log('用户滚动了')
+        userScrolled.value = true
+      }, 100)
+    )
+  }
+})
+```
+
