--- a/docs/frontend/前端开发常见解决方案/5-侧边栏收缩问题.md
+++ b/docs/frontend/前端开发常见解决方案/5-侧边栏收缩问题.md
@@ -100,11 +100,7 @@ css
 
 ## 方案 3：使用 style.width 逐步调整
 
-```
-tsx
-
-
-复制编辑
+```tsx
 const [width, setWidth] = useState(200);
 
 const toggleSidebar = () => {
@@ -138,11 +134,7 @@ const toggleSidebar = () => {
 
 ## ✅ 方案 4：使用 transform scaleX
 
-```
-css
-
-
-复制编辑
+```css
 .sidebar {
   width: 200px; /* 侧边栏的原始宽度 */
   transform-origin: left; /* 变换原点在左侧 */
@@ -176,11 +168,7 @@ css
 
 ## ✅ 方案 5：使用translateX()
 
-```
-css
-
-
-复制编辑
+```css
 .sidebar {
   width: 200px;
   transform: translateX(0);
