--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -173,6 +173,8 @@ defineModel接收两个参数
 
 defineModel返回的是一个Ref对象CustomRefImpl
 
+set 函数必须返回一个值。这个返回值将是 isDeepThink 的最终新值，并且也会是发出 update:isDeepThink 事件时传递给父组件的值。
+
 ```ts
 const id = defineModel('id', {
     type: Number,
