--- a/docs/linux/Nginx/4.nginx常见问题.md
+++ b/docs/linux/Nginx/4.nginx常见问题.md
@@ -137,9 +137,11 @@ server {
 - `$uri/` 是 `/vue-app/home/`，因此会查找 `/opt/homebrew/var/web/vue-app/dist/vue-app/home/`（无效）。
 - 回退到 `/index.html` 时，它会解析为 `/opt/homebrew/var/web/index.html`，而不是期望的 `/opt/homebrew/var/web/vue-app/dist/index.html`。
 
-**问题原因：**
+**问题：**为什么/index.html指的是`/opt/homebrew/var/web/index.html`呢
 
-- 默认 `/index.html` 是基于 `root` 的路径，而你的静态文件在 `alias` 指定的目录下，所以路径不匹配。
+- 注意这里`try_files` 里的 **绝对路径**（以 `/` 开头）是基于 server 的 root，而不是 alias
+
+- 要让它回退到 alias 目录下的文件 → **用相对路径**
 
 ### try_files $uri $uri/ /vue-app/index.html;中的/vue-app/指的是什么？
 
