--- a/docs/frontend/React/4.前端常见解决方案/10-异步任务并发控制.md
+++ b/docs/frontend/React/4.前端常见解决方案/10-异步任务并发控制.md
@@ -178,6 +178,8 @@ export const loopSetInterval = (
 
 进一步优化
 
+增加SSR友好、防止在 Node.js、SSR 中出错。
+
 ```ts
 /**
  * 创建一个定时器，每隔ms执行一遍cb，默认不会立即执行cb
@@ -187,11 +189,16 @@ export const loopSetInterval = (
  * @param {boolean} [options.immediate=false] - 是否立即执行cb
  * @returns {Function} - 一个取消定时器的函数
  */
-export const loopSetInterval = (
+export const mySetInterval = (
     cb: () => void,
     ms: number,
     options: { immediate?: boolean } = { immediate: false }
-) => {
+): (() => void) => {
+    if (typeof window === 'undefined') {
+        console.warn('loopSetInterval: 在非浏览器环境中无效')
+        return () => {}
+    }
+
     if (ms <= 0) {
         throw new Error('时间间隔必须大于0')
     }
@@ -199,7 +206,7 @@ export const loopSetInterval = (
     let timeoutId: number | undefined
     let isRunning = true
 
-    const excute = () => {
+    const execute = () => {
         if (!isRunning) return
         try {
             cb()
@@ -208,18 +215,18 @@ export const loopSetInterval = (
         }
         // 只有当isRunning为true时才继续设置下一个定时器
         if (isRunning) {
-            timeoutId = window.setTimeout(excute, ms)
+            timeoutId = window.setTimeout(execute, ms)
         }
     }
-    // 立即执行或设置第一个定时器
-    if (options?.immediate) {
+    if (options.immediate) {
         try {
             cb()
-        } catch (e) {
-            console.error('定时器初始回调执行出错:', e)
+        } catch (error) {
+            console.error('loopSetInterval: 初始回调执行出错', error)
         }
-        timeoutId = window.setTimeout(excute, ms)
-    } else timeoutId = window.setTimeout(excute, ms)
+    }
+
+    timeoutId = window.setTimeout(execute, ms)
     // 返回清理函数
     return () => {
         isRunning = false
@@ -230,4 +237,3 @@ export const loopSetInterval = (
     }
 }
 ```
-
