[build] docs: 添加 dayjs 依赖并在 enhanceApp.js 中配置，更新 Flex 布局和异步任务控制文档

--- a/docs/frontend/React/4.前端常见解决方案/10-异步任务并发控制.md
+++ b/docs/frontend/React/4.前端常见解决方案/10-异步任务并发控制.md
@@ -60,6 +60,8 @@ const handleRequest = () => {
 
 使用第三方库p-limit实现
 
+p-limit 用于在 **异步任务执行时限制并发数量**，防止一次性发出过多请求。
+
 ```ts
 import pLimit from 'p-limit'
 const taskCount = ref(10)
