[build] docs: update

--- a/docs/frontend/JavaScript/Event/防抖和节流.md
+++ b/docs/frontend/JavaScript/Event/防抖和节流.md
@@ -219,3 +219,86 @@ _.throttle(func, [wait=0], [options=])
 **/
 ```
 
+
+
+### useDeboundeFn
+
+```ts
+import { useDebouncedFn } from '@vueuse/core'
+
+const debouncedFn = useDebouncedFn(fn, delay, options?)
+```
+
+### 参数说明
+
+- fn: 要防抖的函数
+
+- delay: 延迟时间（毫秒）
+
+- options: 可选配置项
+
+  - maxWait: 最大等待时间
+
+  - leading: 是否在延迟开始前调用
+
+  - trailing: 是否在延迟结束后调用
+
+使用示例
+
+```vue
+<template>
+  <div class="search-container">
+    <input 
+      v-model="query" 
+      @input="handleInput"
+      class="search-input"
+      placeholder="输入搜索关键词..."
+    />
+    <div class="search-info">
+      <p>当前输入: {{ query }}</p>
+      <p>实际搜索次数: {{ searchCount }}</p>
+      <p>最后搜索时间: {{ lastSearchTime }}</p>
+    </div>
+  </div>
+</template>
+
+<script setup lang="ts">
+import { ref } from 'vue'
+import { useDebouncedFn } from '@vueuse/core'
+
+const query = ref('')
+const searchCount = ref(0)
+const lastSearchTime = ref('')
+
+// 创建防抖搜索函数
+const debouncedSearch = useDebouncedFn(
+  async (searchTerm: string) => {
+    if (!searchTerm.trim()) return
+    
+    searchCount.value++
+    lastSearchTime.value = new Date().toLocaleTimeString()
+    
+    try {
+      // 模拟 API 调用
+      console.log('执行搜索:', searchTerm)
+      // const results = await searchAPI(searchTerm)
+      // 处理搜索结果
+    } catch (error) {
+      console.error('搜索失败:', error)
+    }
+  },
+  500, // 500ms 延迟
+  {
+    maxWait: 2000, // 最大等待 2 秒
+    leading: false, // 不在开始时执行
+    trailing: true  // 在结束时执行
+  }
+)
+
+// 处理输入事件
+const handleInput = () => {
+  debouncedSearch(query.value)
+}
+</script>
+```
+
