[build] docs: update

--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -178,13 +178,17 @@ set 函数必须返回一个值。这个返回值将是 isDeepThink 的最终新
 ```ts
 const id = defineModel('id', {
     type: Number,
-    default: 100,
+    // default: 100,
     required: true,
     set(v) {
         return v
     }
 })
 ```
+
+需要注意的是：default和set不能同时设置
+
+
 
 ### defineModel的应用
 
