[build] docs: update

--- a/docs/frontend/前端开发常见解决方案/55-拖拽控制宽度.md
+++ b/docs/frontend/前端开发常见解决方案/55-拖拽控制宽度.md
@@ -123,3 +123,20 @@ iframe.onload = () => {
 - 不需要访问 iframe。
 - 适用跨域 iframe。
 - 简单可靠。
+
+
+
+
+
+drag-overlay的样式作用如下：
+
+```css
+.drag-overlay {
+  position: fixed;      /* 位置固定在视口，不随滚动条变化 */
+  inset: 0;             /* 等价于 top:0; right:0; bottom:0; left:0; 让元素充满整个窗口 */
+  z-index: 9999;        /* 放到页面最上层，保证盖住所有内容和 iframe */
+  cursor: col-resize;   /* 鼠标样式显示为左右拖拽（左右两向箭头） */
+  background: transparent; /* 完全透明，看不到但仍然接收鼠标事件 */
+}
+```
+
