[build] docs: update

--- a/docs/frontend/JavaScript/事件相关/事件委托.md
+++ b/docs/frontend/JavaScript/事件相关/事件委托.md
@@ -61,3 +61,41 @@ e.target是一个DOM元素
 - `event.stopPropagation()`
 
   阻止事件冒泡,即冒泡事件到了当前元素处就终止了,不会继续向上级元素传递
+
+
+
+## MouseEvent.relatedTarget
+
+relatedTarget 是 DOM 事件对象（Event）中的一个属性，主要用于 焦点事件（focus events） 和 鼠标事件（mouse events） 中的某些特定场景，用来表示“与当前目标元素相关联的另一个元素”。
+
+### **在鼠标事件中的作用（mouseenter、mouseleave）**
+
+| 事件       | relatedTarget 的含义       |
+| ---------- | -------------------------- |
+| mouseenter | 鼠标离开的元素（从哪里来） |
+| mouseleave | 鼠标进入的元素（到哪里去） |
+
+示例：
+
+```vue
+<script setup lang="ts">
+interface MouseRelatedEvent extends MouseEvent {
+  relatedTarget: EventTarget | null
+}
+
+const handleMouseEnter = (e: MouseRelatedEvent) => {
+  const from = e.relatedTarget as HTMLElement | null
+  const to = e.target as HTMLElement
+
+  console.log('鼠标从', from?.tagName || '外部', '进入', to.tagName)
+}
+</script>
+
+<template>
+  <div @mouseenter="handleMouseEnter" style="border: 1px solid; padding: 20px;">
+    鼠标进入我
+  </div>
+</template>
+```
+
+> 注意：mouseover / mouseout 也会冒泡，而 mouseenter / mouseleave 不冒泡，更适合用 relatedTarget 判断“跨元素移动”。
