--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -469,6 +469,15 @@ ProvideContext()
 const globalContext = useContext()
 ```
 
+`provide('trainType', computed(() => props.trainType))`  和 `provide('trainType', props.trainType)`  的区别
+
+| 写法                                                    | 是否响应 props.trainType 的变化 |
+| ------------------------------------------------------- | ------------------------------- |
+| `provide('trainType', props.trainType)`                 | ❌ 不会变，值被“拍扁成普通值”    |
+| `provide('trainType', computed(() => props.trainType))` | ✅ 会跟随 props.trainType 变化   |
+
+一个是响应式一个是普通值
+
 
 
 ## Vue3中的context使用
