--- a/docs/frontend/CSS/4-浏览器/8-自适应与媒体查询.md
+++ b/docs/frontend/CSS/4-浏览器/8-自适应与媒体查询.md
@@ -63,6 +63,19 @@ and、not、only、,(逗号)
 
 
 
+##  业界主流框架的断点标准
+
+| **级别**       | **尺寸 (px)** | **对应设备**              | **Tailwind 命名** | **Element Plus 命名** |
+| -------------- | ------------- | ------------------------- | ----------------- | --------------------- |
+| **超小 (XS)**  | `< 640`       | 手机（竖屏）              | —                 | `xs`                  |
+| **小型 (SM)**  | `≥ 640`       | 手机（横屏）/ 小型平板    | `sm`              | `sm`                  |
+| **中型 (MD)**  | `≥ 768`       | **iPad / 平板（竖屏）**   | `md`              | `md`                  |
+| **大型 (LG)**  | `≥ 1024`      | **iPad Pro / 笔记本电脑** | `lg`              | `lg`                  |
+| **超大 (XL)**  | `≥ 1280`      | **标准桌面显示器**        | `xl`              | `xl`                  |
+| **特大 (2XL)** | `≥ 1536`      | **大屏显示器 / 高分屏**   | `2xl`             | `---`                 |
+
+
+
 ## prefers-color-scheme
 
 https://developer.mozilla.org/zh-CN/docs/Web/CSS/@media/prefers-color-scheme
