--- a/docs/frontend/CSS/4-浏览器/浏览器滚动条样式.md
+++ b/docs/frontend/CSS/4-浏览器/浏览器滚动条样式.md
@@ -31,3 +31,75 @@ https://juejin.cn/post/6975319039157469192
 }
 ```
 
+
+
+## min-height: 0的作用
+
+> `min-height: 0;` **最常见、也是最容易被忽略的作用**是：
+>  👉 **允许元素在 Flex / Grid 布局中“真正变小”，从而让内部出现滚动条**。
+
+在 `flex` 或 `grid` 容器中，子元素**默认 `min-height: auto`**，
+ 会导致它**不能被压缩**，从而**撑破布局或滚动失效**。
+
+## 1️⃣ 为什么会有这个问题？
+
+### 默认行为（坑点）
+
+```
+.flex {
+  display: flex;
+  height: 300px;
+}
+
+.child {
+  flex: 1;
+  overflow: auto;
+}
+```
+
+你可能期望：
+
+- `.child` 高度 = 300px
+- 内容超出时出现滚动条
+
+❌ 实际却可能：
+
+- `.child` 被内容撑高
+- 父容器被撑破
+- **滚动条不出现**
+
+### 根本原因
+
+在 **Flex / Grid** 中：
+
+```
+min-height: auto; /* 默认值 */
+```
+
+意味着：
+
+> 子元素的最小高度 = 内容高度
+>  → 不允许被压缩
+
+------
+
+## 2️⃣ `min-height: 0;` 做了什么？
+
+```
+.child {
+  flex: 1;
+  min-height: 0;
+  overflow: auto;
+}
+```
+
+等价于告诉浏览器：
+
+> “这个元素可以比内容高度小”
+
+结果：
+
+- 父容器高度生效
+- 子元素被压缩
+- `overflow: auto` 开始工作
+- 滚动条正常出现 ✅
