--- a/docs/frontend/JavaScript/1/1-深拷贝浅拷贝.md
+++ b/docs/frontend/JavaScript/1/1-深拷贝浅拷贝.md
@@ -152,3 +152,22 @@ description: 什么是深拷贝?什么是浅拷贝?
   console.log(obj2) //{ name: 'zs', age: 18, children: { name: 'wx', age: 20 } }
   ```
 
+
+
+## structuredClone
+
+[`Window`](https://developer.mozilla.org/zh-CN/docs/Web/API/Window) 接口的 **`structuredClone()`** 方法使用[结构化克隆算法](https://developer.mozilla.org/zh-CN/docs/Web/API/Web_Workers_API/Structured_clone_algorithm)将给定的值进行[深拷贝](https://developer.mozilla.org/zh-CN/docs/Glossary/Deep_copy)。
+
+兼容性：Chrome98
+
+structuredClone不能克隆的格式：
+
+- Proxy（很常见：你的数据很可能来自 Vue 的 ref/reactive）
+- undefined 的 getter/setter
+- function
+- DOM 节点
+- WebSocket、File 等浏览器对象
+- 循环引用
+
+对于vue中的proxy对象可以使用toRaw先转成原生对象
+
