--- a/docs/frontend/JavaScript/Event/防抖和节流.md
+++ b/docs/frontend/JavaScript/Event/防抖和节流.md
@@ -221,7 +221,7 @@ _.throttle(func, [wait=0], [options=])
 
 
 
-### useDeboundeFn
+## useDeboundeFn
 
 ```ts
 import { useDebouncedFn } from '@vueuse/core'
