--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -579,6 +579,90 @@ export function useOurPlugin() {
 app.use(ourPlugin({ message: 'hello' }))
 ```
 
+### TypeScript 对 Vue 插件类型推断的一点小坑
+
+在定义插件时，发现类型提示总是失效
+
+```ts
+/**
+ * Vue3 埋点插件
+ */
+
+export const TrackerPlugin = {
+  install(app: App, config: TrackerConfig) {
+    // 创建 Tracker 实例
+    const tracker = createTracker(config)
+
+    // 注入全局属性
+    app.config.globalProperties.$tracker = tracker
+
+    // 提供依赖注入
+    app.provide('tracker', tracker)
+
+    // 自动追踪路由变化（如果使用了 Vue Router）
+    if (config.enabled !== false) {
+      const router = app.config.globalProperties.$router
+      if (router) {
+        router.afterEach((to: any) => {
+          tracker.track('page_view', {
+            path: to.path,
+            name: to.name,
+            query: to.query
+          })
+        })
+      }
+    }
+  }
+}
+```
+
+main.ts使用
+
+```ts
+app.use(TrackerPlugin, {
+        enabled: true,
+        reportUrl: '',
+  // ...
+    })
+```
+
+每次输完reportUrl后，后面的属性类型提示就失效了
+
+经查询原来是：
+
+> TypeScript 对 `Plugin` 泛型的推断在 `app.use` 调用时并不会把它和第二个参数的类型完全绑定，所以在 `main.ts` 写 `app.use(TrackerPlugin, {...})` 时，TS 无法推断 `config` 的类型，导致写完 `reportUrl` 后，类型提示就消失了。
+
+解决方案是尽量把插件写成返回 `Plugin` 的工厂函数
+
+```ts
+export function createTrackerPlugin(config: TrackerConfig): Plugin {
+  return {
+    install(app: App) {
+      const tracker = createTracker(config)
+      app.config.globalProperties.$tracker = tracker
+      app.provide('tracker', tracker)
+
+      if (config.enabled !== false) {
+        const router = app.config.globalProperties.$router
+        if (router) {
+          router.afterEach((to: any) => {
+            tracker.track('page_view', {
+              path: to.path,
+              name: to.name,
+              query: to.query,
+            })
+          })
+        }
+      }
+    },
+  }
+}
+```
+
+
+
+总结：**Vue3 插件类型推断对 `Plugin<T>` 在 `app.use` 中有限支持**，用插件工厂函数（方案 1）是目前推荐的做法。
+
 
 
 
@@ -1186,6 +1270,26 @@ declare module '@vue/runtime-core' {
 
 如果组件只有一个根元素，则class会被自动应用到根元素上；反之如果组件有多个根元素，Vue3 不会自动决定将 class 应用到哪个元素上。你需要在组件中使用v-bind="$attrs"显式指定哪个元素接收这些属性
 
+
+
+## v-bind="$attrs"是干什么的
+
+> `v-bind="$attrs"` 是 Vue 3 中实现 **“属性透传”**（Attributes Inheritance）的终极武器。它能把你传递给父组件的所有属性、事件、Class 和 Style，一键转交给子组件中的某个特定元素。
+
+在 Vue 3 中，`$attrs` 包含了：
+
+- **你没有在 `props` 中声明的属性**（如 `data-v-xxx`, `title`, `name` 等）。
+- **你没有在 `emits` 中声明的事件**（如 `@click`, `@input` 等，在 `$attrs` 中表现为 `onClick`, `onInput`）。
+- **Class 和 Style**。
+
+当你写 `v-bind="$attrs"` 时，就相当于说：**“把所有传给我的、我不认识的东西，全部原封不动地交给这个内部元素。”**
+
+### 为什么要用它？（核心场景）
+
+假设你在封装一个自己的 `MyInput.vue` 组件，内部包裹了一个 `el-input`。
+
+如果你不用 `$attrs`，你想支持 `placeholder`、`disabled`、`type`、`clearable` 等几十个属性，你就得在 `props` 里一个一个写一遍，非常繁琐。
+
 ```vue
 <!-- MultiRootComponent.vue -->
 <template>
@@ -1197,6 +1301,8 @@ declare module '@vue/runtime-core' {
 
 ### 禁用属性继承
 
+默认情况下，Vue 会尝试把属性挂在组件的**根节点**上
+
 如果不希望组件根元素继承class属性，可以给组件设置inheritAttrs: false
 
 ```vue
@@ -1206,6 +1312,16 @@ defineOptions({
 })
 </script>
 ```
+
+### v-bind="props"
+
+只包含你在 `defineProps` 里明确声明的属性。
+
+而v-bind="$attrs"
+
+包含你在 `props` 和 `emits` 之外的所有东西。
+
+
 
 
 
@@ -1222,3 +1338,10 @@ defineOptions({
 </script>
 ```
 
+### 定义组件ref
+
+```ts
+const moultiModalQaRef = ref<InstanceType<typeof MoultiModalQa>>()
+```
+
+这样定义的moultiModalQaRef使用起来就有类型提示
