--- a/docs/frontend/前端开发常见问题/浏览器兼容性处理.md
+++ b/docs/frontend/前端开发常见问题/浏览器兼容性处理.md
@@ -34,3 +34,63 @@ img {
 ### 交互兼容(JavaScript)
 
 - 事件兼容
+
+
+
+
+
+## 使用Puppeteer安装Chrome 浏览器测试兼容性
+
+```sh
+npx @puppeteer/browsers lanuch chrome@115.0.5790.170
+```
+
+这行命令的作用是：
+
+> 使用 Puppeteer 官方的浏览器下载器，安装 **Chrome v115.0.5790.170** 版本，并在本地进行注册（不影响你系统中已有的 Chrome）。
+
+执行后，Puppeteer 会：
+
+1. 从 Google 官方镜像下载对应版本的 Chrome 二进制包。
+
+2. 将其解压到本地缓存目录（默认路径如下）：
+
+   - macOS / Linux:
+
+     ```sh
+     ~/.cache/puppeteer/
+     ```
+
+   - Windows:
+
+     ```
+     C:\Users\<用户名>\AppData\Local\puppeteer\
+     ```
+
+3. 生成一个 JSON 文件（如 `.puppeteerrc.json`），记录该版本的 Chrome 信息。
+
+4. 安装完成后会提示类似：
+
+   ```
+   Installed browser chrome@116.0.5793.0 at:
+   /Users/ted/.cache/puppeteer/chrome/mac-116.0.5793.0/chrome-mac/Chromium.app/Contents/MacOS/Chromium
+   ```
+
+   
+
+列出所有已安装版本 `npx @puppeteer/browsers list`
+
+### 如何启动安装的旧版chrome
+
+```sh
+npx @puppeteer/browsers launch chrome@115.0.5790.170
+```
+
+或手动运行
+
+```sh
+ ./chrome/mac_arm-115.0.5790.170/chrome-mac-arm64/Google\ Chrome\ for\ Testing.app
+ /Contents/MacOS/Google\ Chrome\ for\ Testing
+ --user-data-dir=/tmp/chrome-test/
+```
+
