--- a/docs/linux/Nginx/4.nginx常见问题.md
+++ b/docs/linux/Nginx/4.nginx常见问题.md
@@ -202,3 +202,84 @@ return 301适用于简单的重定向，不需要进一步修改 URL 路径。
 
 
 
+## 子路径部署（sub-path deploy）
+
+```nginx
+location ^~ /vue-app/ {
+        alias /Users/cheng/Github/Vue3/vue3-template/app/vue3-template/dist/;
+        # # 自动添加末尾斜杠（可选）
+        # rewrite ^/vue-app$ $scheme://$host$uri/ permanent;
+        expires 1h;
+        # # 优先尝试返回具体文件，找不到则返回 index.html
+        try_files $uri $uri/ /vue-app/index.html;
+        error_page 404 /vue-app/index.html;
+    }
+```
+
+为什么try_files中是 /vue-app/index.html 而不是 /index.html
+
+这是子路径部署（sub-path deploy）时常见的问题，因为你的 Vue 应用 **不是部署在根路径 `/`**，而是部署在:
+
+/vue-app/，所以对应的 Nginx fallback（history 模式匹配不到时返回的文件）
+
+ **必须匹配访问路径，而不是物理路径。**
+
+
+
+## return 301 /agent/ 和 return 301 $scheme://$host/agent/
+
+```nginx
+location = /agent {
+    return 301 /agent/;
+}
+
+location = /agent {
+    return 301 $scheme://$host/agent/;
+}
+```
+
+### 一、`return 301 /agent/` 的行为
+
+- 只是返回一个**相对路径重定向**（Location: /agent/）
+- 浏览器会根据当前协议和主机自动补全
+- ✅ 对单域名场景一般没问题
+- ❌ 如果请求是 `https://example.com:28082/agent`，浏览器会自动补全，但端口可能没问题；但是在**跨域或负载均衡、代理、反代场景**下可能会出问题
+
+### 二、`return 301 $scheme://$host/agent/` 的行为
+
+- 明确**协议 + 域名 + 端口**，返回绝对 URL
+- 完全不会依赖浏览器自己补全
+- ✅ 无论你前端在 HTTP、HTTPS、或者 behind proxy、负载均衡器，都会**100% 正确**
+- ✅ SEO 更安全，搜索引擎喜欢绝对 URL
+- ✅ 可以避免 HTTPS / HTTP 自动切换问题
+
+外部 Nginx 在 443 端口转发到内部 28082
+
+Location 可能被浏览器认为是相对于内部端口（某些代理环境、Docker / Kubernetes 端口映射容易出现问题）
+
+访问:443/agent可能会
+
+
+
+这样还有个问题，会丢失查询参数
+
+解决办法
+
+### $args保留参数
+
+```nginx
+return 301 $scheme://$host$uri/$is_args$args;
+```
+
+- `$args` → 原始的 query string，例如 `loginType=uap`
+- `$is_args` → 如果 `$args` 非空则返回 `?`，否则返回空
+
+`$is_args` 和 `$args` 都是 **Nginx 的内置变量**
+
+$args
+
+- **作用**：表示请求的 **query string**（问号 `?` 后面的部分）
+
+$is_args
+
+- **作用**：判断是否存在 query string，用于拼接问号 `?`
