[build] docs: update

--- a/docs/frontend/CSS/4-浏览器/8-自适应与媒体查询.md
+++ b/docs/frontend/CSS/4-浏览器/8-自适应与媒体查询.md
@@ -63,6 +63,31 @@ and、not、only、,(逗号)
 
 
 
+## 多分辨率适配
+
+1. 核心适配层级（主流 PC 设备）
+
+| **设备类型**            | **常见分辨率 (px)**             | **比例**     | **特点**                                                 |
+| ----------------------- | ------------------------------- | ------------ | -------------------------------------------------------- |
+| **标准 1080P 显示器**   | **1920 x 1080**                 | 16:9         | **最标准的设计稿尺寸**。绝大多数 PC 端网页的基准。       |
+| **主流笔记本/旧显示器** | **1536 x 864** / **1440 x 900** | 16:9 / 16:10 | 14寸笔记本最常见的实际渲染分辨率（通常有 125% 的缩放）。 |
+| **低分屏/旧款笔记本**   | **1366 x 768**                  | ~16:9        | 曾经的王者，现在多见于工业电脑或旧款办公本。             |
+
+### 2. 高端与专业显示层级
+
+- **2K 高清屏 ($2560 \times 1440$)**：程序员和设计师常用。如果不用 `rem` 适配，网页内容会显得非常“空旷”。
+- **4K 超清屏 ($3840 \times 2160$)**：通常会有 150% - 200% 的系统缩放。如果你配置了 `postcss-pxtorem`，在这些屏幕上通过增大 `rootValue` 可以让文字依然清晰易读。
+- **带鱼屏 (21:9)**：如 $3440 \times 1440$。这类屏幕**宽度极大**，适配重点在于**限制内容最大宽度 (`max-width`)**，防止 UI 元素被拉得太开。
+
+### 3. 特殊设备
+
+- **iPad / 平板电脑**：
+  - 横屏时接近笔记本分辨率（如 $1024 \times 768$ 或 $1180 \times 820$）。
+  - 如果你做的是响应式网页，这属于 **Desktop 和 Mobile 的中间地带**。
+- **工控机/收银机**：经常出现 $1024 \times 768$ 的正方形屏幕，需要垂直方向的适配。
+
+
+
 ##  业界主流框架的断点标准
 
 | **级别**       | **尺寸 (px)** | **对应设备**              | **Tailwind 命名** | **Element Plus 命名** |
