--- a/docs/frontend/前端开发常见问题/浏览器兼容性处理.md
+++ b/docs/frontend/前端开发常见问题/浏览器兼容性处理.md
@@ -94,3 +94,88 @@ npx @puppeteer/browsers launch chrome@115.0.5790.170
  --user-data-dir=/tmp/chrome-test/
 ```
 
+
+
+
+
+## 记录一次兼容性处理
+
+先看一段简单代码
+
+```vue
+<div v-if="isNewChat" :class="$style.panda">
+      <!-- <img :src="pandaImg" alt="panda"> -->
+      <img :src="pandaBg" alt="panda-bg" />
+    </div>
+
+
+<style lang="css" module>
+.panda {
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform:  translateY(calc(-100% + 14px));
+  z-index: 50;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+</style>
+```
+
+在chrome上是正常的
+
+<img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20260121110415693.png" alt="image-20260121110415693" style="zoom:80%;" />
+
+但是在微信内置浏览器中
+
+<img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20260121110542040.png" alt="image-20260121110542040" style="zoom: 30%;" />
+
+左边溢出了
+
+询问AI：
+
+> 这是一个典型的浏览器引擎差异导致的问题。
+>
+> Chrome 的处理方式：
+>
+> Chrome（基于 Blink 引擎）在遇到这种情况时：
+>
+> ```
+> .panda {
+>   position: absolute;
+>   right: 0;
+>   /* 没有宽度 */
+>   img {
+>     width: 100%;  /* 依赖父容器宽度 */
+>   }
+> }
+> ```
+>
+> - 会先使用图片的固有尺寸（intrinsic size）来确定容器大小
+>
+> - 然后图片的 width: 100% 基于这个计算出的容器宽度渲染
+>
+> - 结果接近图片原始尺寸，显示正常
+>
+> 微信内置浏览器的处理方式：
+>
+> 微信内置浏览器（通常使用 X5 内核或旧版 WebKit）在相同情况下：
+>
+> - 可能将容器宽度计算为父元素的 100% 宽度或某个异常值
+>
+> - 导致图片被拉伸到很大
+>
+> - 即使设置了 right: 0，左边部分也会溢出屏幕
+
+
+
+最终发现发现去掉外层的div.panda就可以了
+
+当你去掉外层的 `div.panda`，直接在 `<img>` 标签上应用样式时，发生了以下变化：
+
+1. **消除容器递归**：原本是 `div(absolute)` 嵌套 `img(100%)`。微信内核会纠结是先算 `div` 还是先算 `img`。现在只有一个 `img`，浏览器只需要读取图片的 **固有尺寸 (Intrinsic Size)**。
+2. **明确的定位基准**：`<img>` 作为替换元素（Replaced Element），浏览器默认知道它的宽高比。当它被设置为 `position: absolute` 且没有给 `width` 时，浏览器会直接采用图片真实的像素宽度进行渲染。
+3. **避开了宽度分发 Bug**：微信内核不再尝试给中间层 `div` 分配父容器的 100% 宽度，因此也就不会出现“容器太宽导致左侧溢出”的情况。
