[build] docs: update

--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -989,6 +989,15 @@ const attrs = useAttrs()
 
 
 
+**对于 Props**：Vue 会自动帮你做转换。如果你在 `defineProps` 里定义了 `fieldNames`（小驼峰），那么模板里的 `:field-names` 会自动映射过去。
+
+**对于 Attrs**：`attrs` 是一个原始的 JavaScript 对象，它**不会**自动进行“小驼峰”和“短横线”的互转。
+
+- 如果你在模板写的是 `:field-names`，那么在 `attrs` 对象里它的 Key 就是 `"field-names"`。
+- 如果你在模板写的是 `:fieldNames`，在 `attrs` 里它才会是 `fieldNames`。
+
+
+
 ## LRU 缓存策略
 
 ```ts
